docs/apim/4.10/create-and-configure-apis/README.md
---
description: Tutorial on create & configure apis.
metaLinks:
  alternates:
    - ./
---

# Create & Configure APIs

How to create and configure APIs is split into the following five sections:

* [#gravitee-api-definitions](./#gravitee-api-definitions "mention")
* [#create-apis](./#create-apis "mention")
* [#configure-v4-apis](./#configure-v4-apis "mention")
* [#configure-v2-apis](./#configure-v2-apis "mention")
* [#apply-policies](./#apply-policies "mention")

## Gravitee API Definitions

To learn more about Gravitee API definitions and how they're treated, see the following articles:

<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>v2 and v4 comparison</td><td><a href="gravitee-api-definitions/v2-and-v4-api-comparison.md">v2-and-v4-api-comparison.md</a></td></tr><tr><td>Execution Engine</td><td><a href="gravitee-api-definitions/execution-engine.md">execution-engine.md</a></td></tr></tbody></table>

## Create APIs

To learn more about how to create APIs, see the following articles:

<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>v4 API Creation Wizard</td><td><a href="create-apis/v4-api-creation-wizard.md">v4-api-creation-wizard.md</a></td></tr><tr><td>v2 API Creation Wizard</td><td><a href="create-apis/v2-api-creation-wizard.md">v2-api-creation-wizard.md</a></td></tr><tr><td>Import APIs</td><td><a href="create-apis/import-apis.md">import-apis.md</a></td></tr><tr><td>Search for APIs in the Console</td><td><a href="../../4.9/create-and-configure-apis/broken-reference/">broken-reference</a></td></tr></tbody></table>

## Configure v4 APIs

To learn more about how to configure v4 APIs, see the following articles:

<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>General Settings</td><td><a href="configure-v4-apis/general-settings.md">general-settings.md</a></td></tr><tr><td>Entrypoints</td><td><a href="configure-v4-apis/entrypoints/">entrypoints</a></td></tr><tr><td>Endpoints</td><td><a href="configure-v4-apis/endpoints/">endpoints</a></td></tr><tr><td>User Permissions</td><td><a href="configure-v4-apis/user-permissions.md">user-permissions.md</a></td></tr><tr><td>Quality of Service</td><td><a href="configure-v4-apis/quality-of-service.md">quality-of-service.md</a></td></tr><tr><td>Response Templates</td><td><a href="configure-v4-apis/response-templates.md">response-templates.md</a></td></tr><tr><td>CORS</td><td><a href="configure-v4-apis/cors.md">cors.md</a></td></tr><tr><td>Health-Checks</td><td><a href="configure-v4-apis/health-checks.md">health-checks.md</a></td></tr><tr><td>Documentation</td><td><a href="configure-v4-apis/documentation.md">documentation.md</a></td></tr><tr><td>Audit Logs</td><td><a href="configure-v4-apis/audit-logs.md">audit-logs.md</a></td></tr><tr><td>Version History</td><td><a href="configure-v4-apis/version-history.md">version-history.md</a></td></tr></tbody></table>

## Configure v2 APIs

To learn more about how to configure v2 APIs, see the following articles:

<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>General Settings</td><td><a href="configure-v2-apis/general-settings.md">general-settings.md</a></td></tr><tr><td>Proxy Settings</td><td><a href="configure-v2-apis/proxy-settings.md">proxy-settings.md</a></td></tr><tr><td>Load-balancing, Failover, and Health-checks</td><td><a href="configure-v2-apis/load-balancing-failover-and-health-checks.md">load-balancing-failover-and-health-checks.md</a></td></tr><tr><td>Service Discovery</td><td><a href="configure-v2-apis/service-discovery.md">service-discovery.md</a></td></tr><tr><td>User and Groups Access</td><td><a href="configure-v2-apis/user-and-group-access.md">user-and-group-access.md</a></td></tr><tr><td>Documentation</td><td><a href="configure-v2-apis/documentation.md">documentation.md</a></td></tr></tbody></table>

## Apply Policies

To learn more about applying policies to your APIs, see the following articles:

<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>v4 API Policy Studio</td><td><a href="apply-policies/v4-api-policy-studio.md">v4-api-policy-studio.md</a></td></tr><tr><td>v2 API Policy Studio</td><td><a href="apply-policies/v2-api-policy-studio.md">v2-api-policy-studio.md</a></td></tr><tr><td>Shared Policy Groups</td><td><a href="apply-policies/shared-policy-groups.md">shared-policy-groups.md</a></td></tr><tr><td>Resources</td><td><a href="apply-policies/resources.md">resources.md</a></td></tr><tr><td>Custom Policies</td><td><a href="apply-policies/custom-policies.md">custom-policies.md</a></td></tr><tr><td>Policy Reference</td><td><a href="apply-policies/policy-reference/">policy-reference</a></td></tr></tbody></table>

<!-- NEED CLARIFICATION: The GLOBAL_IMPACT describes adding 'AI Semantic Caching' to an alphabetical policy index, but the EXISTING_DOC does not contain an alphabetical policy index. The document contains a card-based navigation structure linking to policy-related pages. Please clarify:
1. Should a new alphabetical policy index section be created in this document?
2. Should the AI Semantic Caching policy be added to the policy-reference/ subdirectory instead?
3. Is there a different document that contains the alphabetical policy index that should be updated? -->
